# litellm-openai-agents-sdk

./: .env.app.example  .env.example  .env.litellm.example  .gitignore  AGENTS.md  README.md  chat.py  compose.yaml  litellm_config.yaml  pyproject.toml  ruff.toml
